Tue Sep 12 18:50:50 1995   John Rivlin (jrivlin@fusion.com)

	* f_pcbc.c: Added include of des_int.h which seemed to
		get lost so that mit_des_xxx get defined.

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * des_int.h, destest.c, init_rkey.c, random_key.c, string2key.c 
	* verify.c : s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * destest.c, random_key.c, string2key.c, verify.c : Remove krb5_enctype
		references, and replace with krb5_keytype where appropriate.
	* init_rkey.c (mit_des_init_random_key()), 
	* string2key.c (mit_des_string_to_key()) : Allow for any DES keytype.


Tue Aug 29 13:29:19 EDT 1995	Paul Park	(pjpark@mit.edu)
	* process_key.c, finish_key.c - Set and use priv_size in the krb5_
		encrypt_block.

Thu Aug 24 18:08:42 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

        * f_cksum.c: Change code to match prototypes. 

	* f_cbc.c, f_ecb, f_parity, f_pcbc: Change des_cblock to
		mit_des_cblock and  des_key_schedule to
		mit_des_key_schedule. Also include des_int.h.

	* destest.c: Change des_cblock to mit_des_cblock and add local
		prototypes. 

	* cs_entry.c: Remove prototypes for mit_des_cbc_cksum and
		mit_des_cbc_cksum. Now in des_int.h.

	* cbc_cksum.c, string2key.c:	Remove casts in call to
		mit_des_cbc_cksum 

	* des_int.h: Add prototype for mit_des_cbc_verf_cksum. Change 
		return code for mit_des_cbc_cksum to match source.

	* des.h: Remove unused structures and defines.

Thu Jul 27 15:18:37 EDT 1995	Paul Park	(pjpark@mit.edu)
	* des_int.h - Inline the old contents of include/krb5/mit-des.h.  This
		is now the only place that it's needed.  Also update the
		prototype for mit_des_ecb_encrypt.
	* destest.c, f_sched.c, fin_rndkey.c, finish_key.c - Include des_int.h
	* destest.c, new_rn_key.c, verify.c - Cast to the correct type for
		mit_des_ecb_encrypt.


Fri Jul 7 16:12:29 EDT 1995	Paul Park	(pjpark@mit.edu)