@@ -1,3 +1,7 @@
+Fri Sep 22 23:32:58 1995  Theodore Y. Ts'o  <tytso@dcl>
+
+	* des_int.h: Define PROTOTYPE if it is not defined elsewhere.
+
 Tue Sep 12 18:50:50 1995   John Rivlin (jrivlin@fusion.com)
 
 	* f_pcbc.c: Added include of des_int.h which seemed to
